<?xml version="1.0"?>
<package format="2">
  <name>darwin_control</name>
  <version>0.1.0</version>
  <description>The darwin_control package</description>

  <maintainer email="eriol@mornie.org">Daniele Tricoli</maintainer>


  <license>BSD-3-Clause</license>


  <url type="repository">https://github.com/eriol/darwin_control</url>


  <author email="eriol@mornie.org">Daniele Tricoli</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>effort_controllers</exec_depend>


  <export>
  </export>
</package>
